# dflash-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: README.md
dflash_mlx/: __init__.py  artifacts.py  bench_logger.py  benchmark.py  benchmark_report.py  benchmark_suites.py  cli.py  diagnostics.py  doctor.py  draft_backend.py  generate.py  internal_debug.py  kernels.py  metal_limits.py  model.py  recurrent_rollback_cache.py  runtime.py  runtime_bundle.py  runtime_context.py  runtime_loading.py  runtime_profiles.py  serve.py  verify_linear.py  verify_qmm.py
docs/: architecture.md  benchmarking.md  cli.md  model_backend.md  observability.md  runtime-flags.md
examples/: demo.py
tests/: test_adaptive_policy.py  test_artifacts.py  test_bench_agentic_trace.py  test_bench_prefix_cache_survival_gate.py  test_benchmark_cli.py  test_cli_config.py  test_context_grid.py  test_copyspec.py  test_ddtree.py  test_dflash_swa_mask.py  test_doctor_cli.py  test_engine_acceptance.py  test_engine_prefill_helpers.py  test_engine_rollback.py  test_gated_delta_tree_kernel.py  test_gemma4_draft.py  test_generate_cli.py  test_memory_waterfall.py  test_observability_writer.py  test_old_apple_chip_policy.py  test_prefill_step_size_runtime.py  test_prefix_cache.py  test_prefix_cache_bench_helpers.py  test_prefix_cache_integration.py  test_prefix_l2.py  test_responses_adapter.py  test_root_cli.py  test_runtime_bundle.py  test_runtime_verify_config.py  test_sdpa_parity.py  test_serve_state_machine.py  test_server_metrics.py  test_server_request_loop.py  test_server_tool_calls.py  (+9 more)
(+85 files in other folders)
