[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dflash-mlx"
version = "0.1.7"
description = "DFlash speculative decoding for Apple Silicon (MLX)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "bstnxbt"}]
dependencies = [
    "mlx>=0.31.0",
    "mlx-lm>=0.31.0",
]

[project.optional-dependencies]
bench = [
    "datasets",
]

[project.urls]
Homepage = "https://github.com/bstnxbt/dflash-mlx"

[project.scripts]
dflash = "dflash_mlx.cli:main"

[tool.setuptools.packages.find]
include = ["dflash_mlx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
